<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/news"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/menu_news"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/call"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/answer"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
    <ImageView
        style="@style/button_image"
        android:src="@drawable/mail"
        />
    <TextView
        style="@style/button_text"
        android:text="@string/sms"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/person"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/Friends"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            android:id="@+id/group"
            style="@style/button_image"
            android:src="@drawable/friends"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/group"/>
        <ImageView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:maxWidth="25dp"
            android:maxHeight="25dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@drawable/squer_for_numbers"
            android:layout_centerVertical="true"
            android:layout_marginLeft="265dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8"
            android:layout_centerVertical="true"
            android:layout_marginLeft="273dp"

            />
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/foto"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/fotos"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/films"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/vidios"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/music"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/audio"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/games"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/games"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/stare"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/beast"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/search"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/search"/>
    </RelativeLayout>
    <RelativeLayout
        style="@style/layout_style"
        >
        <ImageView
            style="@style/button_image"
            android:src="@drawable/setings"
            />
        <TextView
            style="@style/button_text"
            android:text="@string/setings"/>
    </RelativeLayout>

</LinearLayout>
