<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/hieght_bar"
    android:orientation="horizontal"

    >

    <ImageView
        android:id="@+id/ava_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/marg_right"
        android:layout_marginStart="@dimen/marg_left"
        android:contentDescription="@string/ava"

        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical"

        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nature"
            android:textColor="@color/action_bar"
            android:textSize="@dimen/text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_visit"
            android:textColor="@color/text_gray_color" />
    </LinearLayout>


    <ImageView
        android:layout_width="8dp"
        android:layout_height="22dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/marg_right"
        android:layout_marginStart="@dimen/marg_left"
        android:contentDescription="@string/right_menu"
        android:src="@drawable/right_menu_list"

        />


</LinearLayout>
