<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_header"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:paddingEnd="0dp"
    android:paddingStart="15dp">

    <ImageView
        android:id="@+id/image_round"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/fotos"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_round"
        android:text="@string/nature"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:text="@string/online"
        android:textColor="@android:color/white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/fotos"
        android:maxHeight="25dp"
        android:maxWidth="25dp"
        android:scaleType="fitXY"
        android:src="@drawable/search" />

</RelativeLayout>
